tests/machine/x/go/inner_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/inner_join.go:12:17: undefined: CustomersItem
../../../tests/machine/x/go/inner_join.go:15:5: undefined: CustomersItem
../../../tests/machine/x/go/inner_join.go:18:5: undefined: CustomersItem
../../../tests/machine/x/go/inner_join.go:22:14: undefined: OrdersItem
../../../tests/machine/x/go/inner_join.go:23:3: undefined: OrdersItem
../../../tests/machine/x/go/inner_join.go:28:3: undefined: OrdersItem
../../../tests/machine/x/go/inner_join.go:33:3: undefined: OrdersItem
../../../tests/machine/x/go/inner_join.go:38:3: undefined: OrdersItem
../../../tests/machine/x/go/inner_join.go:44:21: undefined: Result
../../../tests/machine/x/go/inner_join.go:45:16: undefined: Result
../../../tests/machine/x/go/inner_join.go:45:16: too many errors

1: //go:build ignore
