tests/machine/x/go/inner_join.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T04:34:56Z

package main

import (
	"fmt"
)

func main() {
	customers := []Customer{Customer{
		ID:   1,
		Name: "Alice",
	}, Customer{
		ID:   2,
		Name: "Bob",
	}, Customer{
		ID:   3,
		Name: "Charlie",
	}}
	orders := []Order{
		Order{
			ID:         100,
			CustomerID: 1,
			Total:      250,
		},
		Order{
			ID:         101,
			CustomerID: 2,
			Total:      125,
		},
		Order{
			ID:         102,
			CustomerID: 1,
			Total:      300,
		},
		Order{
			ID:         103,
			CustomerID: 4,
			Total:      80,
		},
	}
	result := func() []Result {
		results := []Result{}
		for _, o := range orders {
			for _, c := range customers {
				if !(o.CustomerID == c.ID) {
					continue
				}
				results = append(results, Result{
					OrderID:      o.ID,
					CustomerName: c.Name,
					Total:        o.Total,
				})
			}
		}
		return results
	}()
	fmt.Println("--- Orders with customer info ---")
	for _, entry := range result {
		fmt.Println("Order", entry.OrderID, "by", entry.CustomerName, "- $", entry.Total)
	}
}
